// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile renders correctly for non-touch device 1`] = `
<div
  className="profile"
  style={Object {}}
>
  <div
    className="content"
  >
    <span>
      Hi, I am Joanne, was an illustrator for children's books in South Korea, enjoying country like lifestyle here in Wairarapa, New Zealand, love to share some of my works. Enjoy!
    </span>
    <ul>
      <li>
        Illustrator at Dongsuh Publishing Company, 1986-88
      </li>
      <li>
        Personal exhibition at Seoul, 1989
      </li>
      <li>
        Freelance illustrator for children's books, magazines and postcards, 1989-99
      </li>
    </ul>
  </div>
</div>
`;

exports[`Profile renders correctly for touch device 1`] = `
<div
  className="profile"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="content"
  >
    <span>
      Hi, I am Joanne, was an illustrator for children's books in South Korea, enjoying country like lifestyle here in Wairarapa, New Zealand, love to share some of my works. Enjoy!
    </span>
    <ul>
      <li>
        Illustrator at Dongsuh Publishing Company, 1986-88
      </li>
      <li>
        Personal exhibition at Seoul, 1989
      </li>
      <li>
        Freelance illustrator for children's books, magazines and postcards, 1989-99
      </li>
    </ul>
  </div>
</div>
`;
